RESOLVED FIXED294058
REGRESSION (295819@main): Fallback parent quirk should only apply to outside markers
https://bugs.webkit.org/show_bug.cgi?id=294058
Summary REGRESSION (295819@main): Fallback parent quirk should only apply to outside ...
alan
Reported 2025-06-04 19:01:44 PDT
ssia
Attachments
[fast-cq]Patch (3.32 KB, patch)
2025-06-04 19:02 PDT, alan
no flags
alan
Comment 1 2025-06-04 19:02:40 PDT
Created attachment 475485 [details] [fast-cq]Patch
EWS
Comment 2 2025-06-05 05:28:43 PDT
Committed 295869@main (e549784800aa): <https://commits.webkit.org/295869@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 475485 [details].
Radar WebKit Bug Importer
Comment 3 2025-06-05 05:29:13 PDT
Note You need to log in before you can comment on or make changes to this bug.