REGRESSION (295819@main): Fallback parent quirk should only apply to outside markers https://bugs.webkit.org/show_bug.cgi?id=294058

Reviewed by Antti Koivisto.

* LayoutTests/fast/inline/list-item-marker-inside-with-empty-list-expected.html: Added.
* LayoutTests/fast/inline/list-item-marker-inside-with-empty-list.html: Added.
* Source/WebCore/rendering/updating/RenderTreeBuilderList.cpp:
(WebCore::parentCandidateForMarker):

Canonical link: https://commits.webkit.org/295869@main